--- a/algorithmic-toolbox/week1.ipynb
+++ b/algorithmic-toolbox/week1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -52,13 +52,13 @@
        "196"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l = [1, 2, 3, 10, 10, 14, 14, 7, 6, 5]\n",
+    "l = [1, 2, 3, 10, 14, 14, 14, 7, 6, 5]\n",
     "maximum_pairwise_product(l)"
    ]
   }
@@ -79,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
