--- a/neural-networks/perceptron.ipynb
+++ b/neural-networks/perceptron.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "A perceptron classifier is a simple model of a neuron. It has different (inputs) $(x_{1}...x_{n})$ with different weights $(w_{1}...w_{n})$\n",
-    "$$ s = \\sum\\limits_{i=0}^n w_{i} \\cdot x_{i}$$\n",
+    "$ s = \\sum\\limits_{i=0}^n w_{i} \\cdot x_{i}$\n",
     "\n",
     "The weighted sum $s$ of these inputs is then passed through a step function $f$.\n",
     "$$  \n",
